# saltext-vault

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/actions/upload-exitstatus/: action.yml
.github/workflows/: ci.yml  deploy-docs-action.yml  deploy-package-action.yml  docs-action.yml  docs-deploy.yml  get-changed-files.yml  package-action.yml  pr.yml  pre-commit-action.yml  pre-commit-test.yml  prepare-release-action.yml  push.yml  set-resolution-action.yml  tag-auto.yml  tag.yml  test-action.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
changelog/: +approle.added.md  +auth_info.fixed.md  +certmanagedsymlinks.fixed.md  +certsubjectchanges.fixed.md  +clear_cache.fixed.md  +clearcache.fixed.md  +clearcacheclientcontext.fixed.md  +credsuncachedcustom.fixed.md  +cryptography.changed.md  +dbpluginversion.fixed.md  +entityidttl.fixed.md  +expirettl.fixed.md  +exppath.added.md  +fix-ext-pillar-master-impersonating.fixed.md  +gpg.added.md  +issuermissingcrl.fixed.md  +kvv2v1prefixmetadata.fixed.md  +leaseflush.fixed.md  +leaserevocation.fixed.md  +listcrash.fixed.md  +multisan.fixed.md  +openbao-issuer.fixed.md  +optextmergesshpki.fixed.md  +otpport.fixed.md  +pillarmergelists.fixed.md  +pkidictsans.fixed.md  +pkilistempty.fixed.md  +plugins.added.md  +policytemplating.added.md  +rotation_statements.fixed.md  +sdbpatch.fixed.md  +singleusepatch.fixed.md  +sshpkiautocerttype.fixed.md  +sshsigningpolicyempty.fixed.md  +staticcreds.fixed.md  +tokenlookupaccessor.fixed.md  +unwrapuse.fixed.md  106.added.md  109.added.md  111.fixed.md  (+34 more)
docs/: all.rst  changelog.md  conf.py  index.rst
docs/_ext/vault/: policylexer.py  vaultdomain.py
docs/ref/: configuration.md
docs/ref/beacons/: index.rst  saltext.vault.beacons.vault_lease.rst
docs/ref/modules/: all.rst  index.rst  saltext.vault.modules.rst  saltext.vault.modules.vault.rst  saltext.vault.modules.vault_approle.rst  saltext.vault.modules.vault_db.rst  saltext.vault.modules.vault_gpg.rst  saltext.vault.modules.vault_pki.rst  saltext.vault.modules.vault_plugin.rst  saltext.vault.modules.vault_ssh.rst
docs/ref/modules/all/: salt.modules.vault.rst
docs/ref/pillar/: all.rst  index.rst  saltext.vault.pillar.rst  saltext.vault.pillar.vault.rst
docs/ref/pillar/all/: salt.pillar.vault.rst
docs/ref/runners/: all.rst  index.rst  saltext.vault.runners.rst  saltext.vault.runners.vault.rst
docs/ref/runners/all/: salt.runners.vault.rst
docs/ref/sdb/: all.rst  index.rst  saltext.vault.sdb.rst  saltext.vault.sdb.vault.rst
docs/ref/sdb/all/: salt.sdb.vault.rst
docs/ref/states/: all.rst  index.rst  saltext.vault.states.rst  saltext.vault.states.vault.rst  saltext.vault.states.vault_approle.rst  saltext.vault.states.vault_db.rst  saltext.vault.states.vault_gpg.rst  saltext.vault.states.vault_pki.rst  saltext.vault.states.vault_plugin.rst  saltext.vault.states.vault_secret.rst  saltext.vault.states.vault_ssh.rst
docs/ref/states/all/: salt.states.vault.rst
docs/ref/utils/: index.rst  saltext.vault.utils._types.rst  saltext.vault.utils.functools.rst  saltext.vault.utils.vault.api.rst  saltext.vault.utils.vault.approle.rst  saltext.vault.utils.vault.auth.rst  saltext.vault.utils.vault.cache.rst  saltext.vault.utils.vault.client.rst  saltext.vault.utils.vault.db.rst  saltext.vault.utils.vault.exceptions.rst  saltext.vault.utils.vault.factory.rst  saltext.vault.utils.vault.helpers.rst  saltext.vault.utils.vault.kv.rst  saltext.vault.utils.vault.leases.rst  saltext.vault.utils.vault.pki.rst  saltext.vault.utils.vault.rst  saltext.vault.utils.versions.rst
docs/ref/wrapper/: index.rst  saltext.vault.wrapper.vault.rst  saltext.vault.wrapper.vault_approle.rst  saltext.vault.wrapper.vault_db.rst  saltext.vault.wrapper.vault_gpg.rst  saltext.vault.wrapper.vault_pki.rst  saltext.vault.wrapper.vault_plugin.rst  saltext.vault.wrapper.vault_ssh.rst
docs/topics/: auth_faq.md  basic_configuration.md  installation.md  migration_from_core.md  quickstart.md  templating.md
requirements/: base.txt  dev.txt  docs.in  tests.in
requirements/py3.10/: docs.txt  lint.txt  tests.txt
requirements/py3.7/: docs.txt  lint.txt  tests.txt
requirements/py3.8/: docs.txt  lint.txt  tests.txt
requirements/py3.9/: docs.txt  lint.txt  tests.txt
src/saltext/saltext_vault/modules/: vault.py
src/saltext/saltext_vault/pillar/: vault.py
src/saltext/vault/: __init__.py  loader.py
tests/: conftest.py
tests/functional/: conftest.py  test_argspec_works.py
tests/functional/beacons/: conftest.py  test_vault_lease.py
tests/functional/modules/: test_vault.py  test_vault_approle.py  test_vault_db.py  test_vault_gpg.py  test_vault_pki.py  test_vault_plugin.py  test_vault_ssh.py
tests/functional/runners/: conftest.py  test_vault_approle_issuance.py
tests/functional/states/: test_vault_approle.py  test_vault_db.py  test_vault_gpg.py  test_vault_pki.py  test_vault_plugin.py  test_vault_secret.py  test_vault_ssh.py
tests/functional/utils/: test_vault.py  test_vault_api.py  test_vault_leases.py
tests/integration/: conftest.py
tests/integration/modules/: test_vault.py  test_vault_gpg.py
tests/integration/runners/: conftest.py  test_vault.py  test_vault_master_cluster.py
tests/integration/sdb/: conftest.py  test_vault.py
tests/integration/states/: test_vault_db.py
tests/integration/wrapper/: conftest.py  test_vault.py  test_vault_approle.py  test_vault_db.py  test_vault_gpg.py  test_vault_pki.py  test_vault_plugin.py  test_vault_ssh.py
tests/support/: files_mapping.py  gpg.py  helpers.py  mysql.py  paths.py  runtests.py  vault.py
tests/support/pytest/: vault.py
tests/unit/beacons/: test_vault_lease.py
tests/unit/modules/: test_vault.py  test_vault_db.py  test_vault_pki.py
tests/unit/pillar/: test_vault.py
tests/unit/sdb/: test_vault.py
tests/unit/states/: test_vault.py  test_vault_db.py
tools/helpers/: cmd.py  pre_commit.py  venv.py
(+111 files in other folders)
