[metadata]
name = saltext.vault
description = Salt Extension for interacting with Vault
long_description = file: README.md
long_description_content_type = text/markdown
author = Salt Core Team
author_email = saltproject@vmware.com
keywords = salt-extension
url = https://github.com/salt-extensions/saltext-vault
project_urls =
    Source=https://github.com/salt-extensions/saltext-vault
    Tracker=https://github.com/salt-extensions/saltext-vault/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.7
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.extras_require]
dev =
  nox
  pre-commit>=2.4.0
  pylint
  SaltPyLint
docsauto =
  sphinx-autobuild

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.vault = saltext.vault

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  tests = requirements/tests.in
  docs = requirements/docs.in
  lint = requirements/lint.in
  changelog = requirements/changelog.txt

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
