[metadata]
name = saltext.vault
description = Salt Extension for interacting with Vault
long_description = file: README.md
long_description_content_type = text/markdown
author = Salt Core Team
author_email = saltproject@vmware.com
keywords = salt-extension
url = https://github.com/salt-extensions/saltext-vault
project_urls =
    Source=https://github.com/salt-extensions/saltext-vault
    Tracker=https://github.com/salt-extensions/saltext-vault/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.7
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
install_requires =
  salt>=3005

[options.extras_require]
changelog =
  towncrier==22.12.0
dev =
  nox
  pre-commit>=2.4.0
  pylint
  SaltPyLint
docs =
  sphinx
  sphinx-prompt
  sphinxcontrib-spelling
  sphinx-copybutton
  furo
  furo <= 2023.03.27; python_version < "3.8"
  importlib_metadata; python_version < "3.8"
  pyyaml
docsauto =
  sphinx-autobuild
lint =
  pylint
  saltpylint
tests =
  mock >= 3.0.0
  pytest >= 7.0.1; python_version <= "3.6"
  pytest >= 7.2.0; python_version > "3.6"
  pytest-salt-factories >= 1.0.0rc21; sys_platform == 'win32'
  pytest-salt-factories[docker] >= 1.0.0rc21,<1.0.0rc27; sys_platform != 'win32' and python_version < '3.8'
  pytest-salt-factories[docker] >= 1.0.0rc21; sys_platform != 'win32'
  pytest-tempdir >= 2019.10.12
  pytest-helpers-namespace >= 2019.1.8
  pytest-subtests
  pytest-timeout
  pytest-httpserver
  pytest-custom-exit-code >= 0.3
  flaky

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.vault = saltext.vault

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
